styled QrScanner and fixed Nav Z-index collision

--- a/src/components/ContactList.module.css
+++ b/src/components/ContactList.module.css
@@ -37,7 +37,7 @@
 .ContactList .formGroup {
   width: 100%;
   min-width: 15rem;
-  min-height: 4rem;
+  /* min-height: 4rem; */
   position: relative;
   padding: 0.5rem;
   text-align: left;
