--- a/src/components/UI/Header/Header.module.css
+++ b/src/components/UI/Header/Header.module.css
@@ -22,7 +22,7 @@
   left: 0;
   background: rgb(143, 143, 143);
   padding: 0.5rem 1rem;
-  z-index: 1;
+  z-index: 2;
 }
 
 .main_header__welcome {
